[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/entities/bullets/AbstractBullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/bullets/ArrowAlternative.png" type="Texture" id=2]
[ext_resource path="res://src/entities/bullets/ArrowAlternative.gd" type="Script" id=3]
[ext_resource path="res://src/behaviours/damage/Flammable.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 1.5 )

[node name="ArrowAlternative" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Shape" index="0"]
texture = ExtResource( 2 )

[node name="BulletMovement" parent="." index="1"]
movement_per_second = 400.0

[node name="Flammable" parent="." index="4" instance=ExtResource( 4 )]

[connection signal="caught_fire" from="Flammable" to="." method="_on_Flammable_caught_fire"]
[connection signal="extinguished_fire" from="Flammable" to="." method="_on_Flammable_extinguished_fire"]
